--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "migration:revert": "yarn typeorm migration:revert"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
@@ -48,6 +50,7 @@
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
     "@types/express": "^4.17.8",
+    "@types/hapi__joi": "^17.1.7",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
